--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,50 +1,34 @@
 .header {
     position: relative;
-    margin-left: auto;
-    margin-right: auto;
-
+    
     @media screen and (max-width: 767px) {
+        margin-left: auto;
+        margin-right: auto;
         padding-left: 31px;
         padding-right: 31px;
-        max-width: 480px;
     }
 
     @media screen and (min-width: 768px) {
-        padding-left: 39px;
+        padding-left: 50px;
         padding-right: 39px;
-        max-width: 768px;
     }
 
     @media screen and (min-width: 1200px) {
         padding-left: 55px;
-        padding-right: 55px;
-        max-width: 1200px;
+        max-width: 1600px;
     }
 }
 
-.main {
+.main_block {
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
-
-    
 }
 
 .logo {
-    z-index: 1;
-    fill: $header-title-color;
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
-}
-
-.logo-sidebar {
-    @media screen and (max-width: 767px) {
-        display: none;
-    }
-
-    @media screen and (min-width: 768px) {
-        margin: 32px 10.5px;
+    @media screen and (max-width: 768px) {
+        z-index: 1;
+        fill: $header-title-color;
     }
 }
 
@@ -56,13 +40,14 @@
         display: inline-flex;
         margin: 0;
         padding: 0;
-        z-index: 1;
+        z-index: 100;
         border: none;
         outline: none;
         background-color: transparent;
 
         & .icon-close {
             display: block;
+            //z-index: 10;
         }
 
         & .icon-menu {
@@ -84,46 +69,47 @@
 }
 
 /*.backdrop {
-    @media screen and (min-width: 768px) {
-        display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(25, 28, 38, 0.2);
+    transform: translate(100%);
+
+    &.is-open {
+        transform: translate(-100%);
+        transition: transform 500ms linear;
     }
 }*/
 
 .main-nav {
-    z-index: 1;
 
-    @media screen and (max-width: 767px) {
-        /*display: none;*/
-        
-        &.is-open {
-            position: absolute;
-            display: block;
-            top: 0;
-            right: 0;
-            min-width: 337px;
-            padding-top: 118px;
-            padding-left: 40px;
-            padding-bottom: 227px;
-            padding-right: 103px;
-            background-color: $header-title-color;
-            box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08), -1px 0px 3px rgba(0, 0, 0, 0.16);
-        
-        }
-
-        @media screen and (min-width: 768px) {
-            
-        }
-    }
+    &.is-open {
+        position: absolute;
+        display: block;
+        top: 0;
+        right: 0;
+        min-width: 337px;
+        padding-top: 118px;
+        padding-left: 40px;
+        padding-bottom: 227px;
+        padding-right: 103px;
+        z-index: 5;
+        background-color: $header-title-color;
+        box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08), -1px 0px 3px rgba(0, 0, 0, 0.16);
+    }  
 }
 
-.header-list {
+
+.header-block {
     @media screen and (min-width: 768px) {
         display: flex;
-        margin-left: 54px;
+        justify-content: space-between;
     }
 }
 
-.list {
+.site-nav__list {
     z-index: 1;
     @media screen and (max-width: 767px) {
         margin-bottom: 64px;
@@ -131,12 +117,15 @@
 
     @media screen and (min-width: 768px) {
         display: flex;
-        margin-right: 47px;
         padding-top: 12px;
+    }
+
+    @media screen and (min-width: 1200px) {
+       // justify-content: flex-start;
     }
 }
 
-.list .item {
+.site-nav__item {
     font-family: $header-title-text;
     font-style: normal;
     font-weight: 600;
@@ -148,7 +137,6 @@
     }
     
     @media screen and (min-width: 768px) {
-        /*margin-right: 47px;*/
         font-size: 12px;
         line-height: 1.33;
     }
@@ -166,15 +154,9 @@
             margin-right: 40px;
         }
     }
-
-    /*&:last-child {
-        @media screen and (min-width: 768px) {
-        margin-right: 47px;
-      }
-    }*/
 }
 
-.item .link {
+.site-nav__link {
     @media screen and (max-width: 767px) {
         color: $header-social-color;
     }
@@ -189,28 +171,30 @@
     }
 }
 
-.block {
-    @media screen and (min-width: 768px) {
+.group__block {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         display: flex;
         margin-left: 47px;
-        /*margin-right: auto;
-        margin-bottom: 156px;*/
         z-index: 1;
         flex-direction: column-reverse;
         align-items: center;
-        
     }
 
-    
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-left: 315px;
+        z-index: 1;
+        align-items: baseline;
+    }
 }
 
-.contact {
+.contact__block {
     @media screen and (max-width: 767px) {
         margin-bottom: 24px;
     }
 }
 
-.contact-link {
+.contact__link {
     font-family: $header-title-text;
     font-style: normal;
     font-weight: 600;
@@ -234,7 +218,7 @@
     }
 }
 
-.button-appointment {
+.header__button {
     display: inline-block;
 
     background-color: transparent;
@@ -247,6 +231,7 @@
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.09em;
+    text-align: center;
     text-transform: uppercase;
 
     @media screen and (max-width: 767px) {
@@ -256,8 +241,15 @@
         color: $header-social-color;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
         margin-bottom: 20px;
+        padding: 12px 20px;
+        min-width: 160px;
+        color: $header-title-color;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 40px;
         padding: 12px 20px;
         min-width: 160px;
         color: $header-title-color;
@@ -271,13 +263,7 @@
     }
 }
 
-/*.sidebar {
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
-}*/
-
-.page-social {
+.page-social__list {
     @media screen and (max-width: 767px) {
         position: relative;
         padding-left: 100px; 
@@ -303,24 +289,41 @@
     }
 }
 
-.social:not(:last-child) {
-    @media screen and (max-width: 767px) {
-        margin-bottom: 24px;
-    }
-
+.page-social__item {
     @media screen and (min-width: 768px) {
-        margin-right: 40px;
+        writing-mode: vertical-rl;
+        margin-left: 38px;
+        margin-bottom: 40px;
+        z-index: 1;
+    }
+    
+    &:not(:last-child) {
+        @media screen and (max-width: 767px) {
+            margin-bottom: 24px;
+        }
+    
+        @media screen and (min-width: 768px) {
+            margin-right: 40px;
+        }
     }
 }
 
-.social-link {
+.page-social__link {
     font-family: $header-title-text;
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 1.35;
     letter-spacing: 0.2em;
     color: $header-social-color;
+
+    @media screen and (max-width: 767px) {
+        font-size: 14px;
+        line-height: 1.35;
+    }
+
+    @media screen and (min-width: 768px) {
+        font-size: 11px;
+        line-height: 1.36;
+    }
 
     &:hover,
     &:focus {
