--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -14,23 +14,7 @@
     }
 }*/
 
-/*.backdrop {
-    @media screen and (max-width: 767px) {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(25, 28, 38, 0.2);
-
-        transform: translateX(100%);
-        
-        &.is-open {
-            transform: translateX(-100%);
-            transition: transform 500ms linear;
-        }
-    }
-}*/
+/**/
 
 
 
