--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,3 +1,11 @@
+$header-text-color: #9DA4BD;
+$header-title-color: #FFFFFF;
+$accent-color: #FF6C00;
+$header-social-color: #303030;
+$header-rgba-color: rgba(157, 164, 189, 0.6);
+$header-title-text: Open-Sans, sans-serif;
+$header-secondary-text: 'Raleway', sans-serif;
+
 .header {
     position: relative;
     
@@ -26,7 +34,7 @@
 }
 
 .logo {
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
         z-index: 1;
         fill: $header-title-color;
     }
